[package]
name = "typed_screeps"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.46"
num-traits = "0.2.14"
screeps-game-api = { git = "https://github.com/rustyscreeps/screeps-game-api.git", branch = "bindgen" }
wasm-bindgen = "0.2.69"
